fixed responsive mobile overflow right side

--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -16,6 +16,12 @@
     @content;
   }
 }
+
+@mixin large_screens {
+  @media (min-width: #{$large_screens}) {
+    @content;
+  }
+}
 @mixin grid($columnas, $espaciado) {
   display: grid;
   gap: $espaciado;
