--- a/src/scss/layout/_benefits.scss
+++ b/src/scss/layout/_benefits.scss
@@ -3,7 +3,7 @@
   background-position: top;
   padding: 15.4rem 1rem 0 1rem;
   @include tablet() {
-    padding: 20.4rem 1rem 4rem 1rem;
+    padding: 20.4rem 3rem 4rem 3rem;
   }
   @media screen and (min-width: 140rem) {
     padding: 25.4rem 1rem 5.2rem 1rem;
@@ -38,13 +38,17 @@
         position: relative;
         z-index: 0;
         flex-basis: calc(50% - 5.8rem);
-        max-width: 60.941rem;
-        max-height: 34.279rem;
-        border-radius: 5px;
+        border-radius: 5px 5px 0 0;
         box-shadow: 0px 10px 21px 0px rgba(0, 0, 0, 0.29);
+        height: 100%;
+        margin-bottom: 4rem;
+        img {
+          border-radius: 5px 5px 0 0;
+          width: 60.941rem;
+          height: 34.279rem;
+        }
         &::before,
-        &::after,
-        .benefit-link::before {
+        &::after {
           content: "";
           position: absolute;
           z-index: -1;
@@ -52,74 +56,127 @@
           height: 9.3rem;
           background-image: url("/img/cube.png");
           background-size: cover;
+          // display: none;
+          // @include desktop() {
+          //   display: block;
+          // }
         }
-        .benefit-link::before {
-          display: none;
-          @include tablet() {
-            display: block;
+        span {
+          position: absolute;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          &::before {
+            content: "";
+            position: absolute;
+            z-index: -1;
+            width: 8rem;
+            height: 9.3rem;
+            background-image: url("/img/cube.png");
+            background-size: cover;
           }
         }
         &.benefit-manage_img {
           &::before {
             top: -6.8rem;
-            left: -3rem;
+            left: 2rem;
           }
           &::after {
             top: 2rem;
-            left: -4rem;
+            left: 1rem;
           }
-          .benefit-link::before {
-            top: -31.7rem;
-            left: 5rem;
+          span::before {
+            top: -4.5rem;
+            left: 10rem;
+          }
+          @media (min-width:1360px) {
+            &::before {
+              top: -6.8rem;
+              left: -3rem;
+            }
+            &::after {
+              top: 2rem;
+              left: -4rem;
+            }
+            span::before {
+              top: -4.5rem;
+              left: 5rem;
+            }
           }
         }
         &.benefit-access_img {
-          height: 41.079rem;
           &::before {
-            bottom: 5rem;
-            left: -5rem;
+            bottom: -2rem;
+            left: 0rem;
           }
           &::after {
-            bottom: -2rem;
-            left: -1rem;
-          }
-          .benefit-link::before {
             bottom: -9rem;
-            left: 3rem;
+            left: 4rem;
           }
-          img {
-            max-height: 100%;
-            width: 100%;
+          span::before {
+            bottom: -16rem;
+            left: 8rem;
+          }
+          @media (min-width:1360px) {
+            &::before {
+              bottom: -2rem;
+              left: -5rem;
+            }
+            &::after {
+              bottom: -9rem;
+              left: -1rem;
+            }
+            span::before {
+              bottom: -16rem;
+              left: 3rem;
+            }
           }
         }
         &.benefit-flexibility_img {
           &::before {
             top: -9rem;
-            right: -7rem;
+            right: 0rem;
           }
           &::after {
             top: -2rem;
-            right: -2.9rem;
+            right: 4.1rem;
           }
-          .benefit-link::before {
-            top: -29.7rem;
-            right: 4.8rem;
+          span::before {
+            top: -2rem;
+            right: 12rem;
+          }
+          @media (min-width:1360px) {
+            &::before {
+              top: -9rem;
+              right: -7rem;
+            }
+            &::after {
+              top: -2rem;
+              right: -2.9rem;
+            }
+            span::before {
+              top: -2rem;
+              right: 5rem;
+            }
           }
         }
         .benefit-link {
           position: absolute;
           width: 100%;
-          bottom: 0;
-          height: 6.8rem;
+          bottom: -6.5rem;
+          height: 6.5rem;
           background: $white;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          box-shadow: 0px 10px 21px 0px rgba(0, 0, 0, 0.29);
+          border-radius: 0 0 5px 5px;
           a {
             font-size: 2.2rem;
             font-weight: $light;
             line-height: 3.6rem;
             position: relative;
-            display: table;
-            margin: 0 auto;
-            margin-top: 2.3rem;
             &:before {
               content: "";
               position: absolute;
@@ -164,12 +221,9 @@
             font-size: 4.2rem;
           }
           @include desktop() {
-            font-size: 5.2rem;
+            font-size: 4.8rem;
           }
-          @include tablet() {
-            font-size: 4.2rem;
-          }
-          @include desktop() {
+          @include large_screens() {
             font-size: 5.2rem;
           }
         }
