--- a/src/scss/layout/_faq.scss
+++ b/src/scss/layout/_faq.scss
@@ -46,6 +46,7 @@
         font-weight: $regular;
         margin-bottom: 2.9rem;
         position: relative;
+        padding-right: 1.8rem;
         &::before {
           content: "";
           position: absolute;
