--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -54,58 +54,58 @@ header.header-wrapper {
       display: flex;
       flex-direction: column;
       @include mobile() {
-        display: block;
+        flex-direction: row;
       }
       a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         color: $white;
-        font-weight: 400;
-        padding: 1rem 4rem;
         border-radius: 5px;
         line-height: 2.557rem;
         font-size: 1.7rem;
-        font-weight: $regular;
-        @include mobile() {
-          padding: 1.1rem 4.8rem 1.6rem 1.6rem;
-        }
+        width: 21.5rem;
+        height: 5rem;
         @include tablet() {
-          padding: 1.5rem 5.2rem 2rem 2.1rem;
           font-size: 2.2rem;
         }
         &:first-child {
           background-color: $yellow;
-          position: relative;
+          font-weight: $regular;
+          justify-content: space-evenly;
           margin-right: 0rem;
           margin-bottom: 2rem;
           @include mobile() {
             margin-right: 4.1rem;
           }
           img {
-            position: absolute;
             width: 0.8rem;
             height: 1.6rem;
             transform: rotate(90deg);
-            top: 1.55rem;
-            right: 2rem;
-            @include mobile() {
-              top: 1.8rem;
-              right: 2rem;
-            }
+            // top: 1.3rem;
+            // right: 2rem;
+            // @include mobile() {
+            //   top: 1.8rem;
+            //   right: 2rem;
+            // }
             @include tablet() {
               width: 1.1rem;
               height: 1.9rem;
             }
-            @include desktop() {
-              top: 2.05rem;
-            }
+            // @include desktop() {
+            //   top: 1.8rem;
+            // }
           }
         }
         &:last-child {
+          font-weight: $medium;
           background-color: transparent;
           color: #565656;
           outline: 2px solid $yellow;
           opacity: 75%;
           position: relative;
-          padding: 1.5rem 1.4rem 2rem 1.8rem;
+          // padding: 1.5rem 1.4rem 2rem 1.8rem;
+          padding: 0;
           text-align: center;
         }
       }
