--- a/src/scss/layout/_inconveniences.scss
+++ b/src/scss/layout/_inconveniences.scss
@@ -56,6 +56,12 @@
   .inconvenciences-container {
     @include grid(1, 8.7rem);
     @include tablet() {
+      @include grid(3, 3rem);
+    }
+    @include desktop() {
+      @include grid(3, 4rem);
+    }
+    @include large_screens() {
       @include grid(3, 8.7rem);
     }
     .inconveniences-item {
