--- a/src/scss/layout/_popup.scss
+++ b/src/scss/layout/_popup.scss
@@ -45,7 +45,7 @@
     bottom: 0;
     right: 0;
     margin: auto;
-    overflow: scroll;
+    overflow-y: scroll;
     background-color: $white;
     box-shadow: 2px 3px 5px #999;
     border-radius: 5px;
