--- a/src/scss/layout/_register.scss
+++ b/src/scss/layout/_register.scss
@@ -4,11 +4,10 @@
   margin: 8rem auto;
   @include mobile() {
     max-width: 50rem;
-    margin: 10rem auto;
+    margin: 0 auto 10rem auto;
   }
   @include tablet() {
     max-width: 80rem;
-    margin: 14rem auto;
   }
   @media screen and (min-width: "1180px") {
     margin: 0.4rem auto 18.3rem auto;
@@ -20,6 +19,7 @@
   &.section.oursolution {
     @include desktop() {
       margin-bottom: 14.5rem;
+      margin-top: 14.5rem;
     }
   }
   .register-content,
@@ -71,16 +71,17 @@
   .oursolution-btn {
     text-align: center;
     a {
-      background-color: $yellow;
-      padding: 1.5rem 1.4rem 2rem 2rem;
-      font-size: 2.2rem;
-      font-weight: $regular;
-      color: $white;
-      border-radius: 5px;
-      height: 5.2rem;
-      display: inline-flex;
+      display: flex;
       justify-content: center;
       align-items: center;
+      width: 21.5rem;
+      height: 5rem;
+      margin: 0 auto;
+      background-color: $yellow;
+      color: $white;
+      font-size: 2.2rem;
+      font-weight: $regular;
+      border-radius: 5px;
     }
   }
 }
